Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95870

Setting plotArea for a ChartView in a layout is not respected

    XMLWordPrintable

Details

    • macOS, Windows
    • f78e11381f2dedcab4bda44e52b3c75d810766c4 (qt/qtcharts/dev) f5de71486771405c6767a79c4e97b6acc1c28272 (qt/qtcharts/6.2) 69ea9f58fd3267c8dd75c162137866e3b60facde (qt/tqtc-qtcharts/5.15)

    Description

      If you set the plotArea of a ChartView, it should take priority over any other sizing of the plotArea from other styling options.

      But if you specifically have a ChartView that is a child of a Layout, the plotArea does not take priority unless the window is resized at least once.

      See the attached example, the plotArea has been set to (0, 0, width, height) so it should take up the entire rect of the ChartView but does not until the window has been manually resized.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tokorpip Tomi Korpipää
            kevin.zhang Kevin Zhang
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes