Fix incorrect plotArea before resize

If plotArea is set inside ChartView, contentGeometry is updated too
early and we end up with incorrect plotArea. Invalidate the layout to
correct the geometry.

Fixes: QTBUG-95870
Change-Id: I761125633bcbb8297e629b3e98d61e7d95975806
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
(cherry picked from commit f78e11381f2dedcab4bda44e52b3c75d810766c4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>