src/chartsqml2/declarativechart.cpp
@@ -70,6 +70,7 @@
 #include <QtCore/QTimer>
 #include <QtCore/QThread>
 #include <QtQuick/QQuickWindow>
+#include <QtWidgets/QGraphicsLayout>
 
 #if QT_CONFIG(charts_datetime_axis)
 #include <QtCharts/QDateTimeAxis>
@@ -1550,6 +1551,10 @@ QPointF DeclarativeChart::mapToPosition(const QPointF &value, QAbstractSeries *s
 void DeclarativeChart::setPlotArea(const QRectF &rect)
 {
     m_chart->setPlotArea(rect);
+
+    // If plotArea is set inside ChartView, contentGeometry is updated too early and we end up
+    // with incorrect plotArea. Invalidate the layout to correct the geometry.
+    m_chart->layout()->invalidate();
 }
 
 QT_END_NAMESPACE
